--- a/day-01/firstAssigment/style.css
+++ b/day-01/firstAssigment/style.css
@@ -1,16 +1,19 @@
- 
 /* html rules
 ----------------------------------------*/
 body {
-  background-color: #f8f4e9;
-  font-family: 'Courier New', Courier, monospace;
+  background-color: #2a7ae4;
+  font-family: "Open Sans", sans-serif;
 }
 
-h1 {
-text-align: center;
-background-color: #dfc9ac;
-padding: 20px;
-color: #221811;
+header {
+  padding: 0 0 20px 0;
+  text-align: center;
+}
+
+section {
+  background-color: #fff;
+
+  z-index: 10;
 }
 
 p {
@@ -19,254 +22,355 @@ p {
 
 a:visited,
 a:link {
-    font-weight: bold;
-    color: blue;
-    text-decoration: none;
+  font-weight: 100;
+  color: #fff;
+  text-decoration: none;
 }
 
 hr {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
- 
+
 nav ul {
-    padding: 0;
+  padding: 0;
 }
 
 nav li {
-    list-style-type: none;
-    padding: 10px;
-    display: inline;
-    border-bottom: 1px solid grey;
-    border-top: 1px solid grey;
+  list-style-type: none;
+  padding: 20px 20px 20px 0px;
+  display: inline;
 }
-article aside
-{
-    float: right;
-    margin-right: 50px;
-    min-width: 150px;
-    border: 1px solid #333;
+
+article aside {
+  float: right;
+  margin-right: 50px;
+  min-width: 150px;
+  border: 1px solid #333;
+}
+
+b {
+  font-weight: bold;
+}
+
+progress[value] {
+  /* Reset the default appearance */
+  -webkit-appearance: none;
+  appearance: none;
+
+  width: 250px;
+  height: 20px;
 }
 
 /* id rules 
 ----------------------------------------*/
 #div-link {
-    margin: 50px;
-    color: #333;
+  margin: 50px;
+  color: #333;
 }
 
 #div-link div {
-    border: 1px dotted #d2b48c;
-    margin-bottom: 25px;
+  border: 1px dotted #d2b48c;
+  margin-bottom: 25px;
 }
 
 #div-link div p.link {
-    float: left;
+  float: left;
 }
 
 #div-link span {
-    color: #221811;
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    border-bottom: 1px dotted #d2b48c;
+  color: #221811;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 1px dotted #d2b48c;
 }
 
 #div-link p {
-    color: #333;
+  color: #333;
+}
+
+#location {
+  clear: both;
 }
 
 #wrapper {
-padding: 0px 50px 50px 50px;
+  padding: 20px 100px;
+
+  color: #fff;
 }
 
 #contactform {
-margin: 10px;
-min-width: 95%;
+  margin: 10px;
+  min-width: 95%;
 }
 
 /* class rules
 ----------------------------------------*/
 .clear {
-clear: both;
+  clear: both;
 }
 .float-left {
-float: left;
+  float: left;
 }
 .labelcol {
-width: 150px;
-padding: 0 15px;
-font-weight: bold;
+  width: 150px;
+  padding: 0 15px;
+  font-weight: bold;
+}
+
+.logo {
+  font-size: 2em;
+}
+
+.videos {
+  background-image: linear-gradient(264deg, #43cbff, #688cff);
+  color: #fff;
+}
+.video-source .item {
+  padding: 0px;
+  position: relative;
 }
 
 .footer {
-margin: 50px;
-color: #333;
-border-bottom: 1px dotted #d2b48c;
+  margin: 50px;
 }
 
 .footer a:link {
-font-weight: bold;
-color: #c63;
-text-decoration: none;
+  font-weight: bold;
+  color: #c63;
+  text-decoration: none;
 }
 
 .footer a:link {
-font-weight: bold;
-color: #c63;
-text-decoration: none;
+  font-weight: bold;
+  color: #c63;
+  text-decoration: none;
 }
 
 .footer a:visited {
-font-weight: bold;
-color: #555;
-text-decoration: none;
+  font-weight: bold;
+  color: #555;
+  text-decoration: none;
 }
 
 .footer a:hover {
-font-weight: bold;
-color: #fc6;
-text-decoration: underline;
+  font-weight: bold;
+  color: #fc6;
+  text-decoration: underline;
 }
 
-.test
-{
-    min-width: 250px;
-    min-height: 250px;
-    background-color: gray;
-    background-image: linear-gradient(transparent 50%, rgba(255,255,255,.5) 50%);
-    background-size: 50px   50px;
+.test {
+  min-width: 250px;
+  min-height: 250px;
+  background-color: gray;
+  background-image: linear-gradient(
+    transparent 50%,
+    rgba(255, 255, 255, 0.5) 50%
+  );
+  background-size: 50px 50px;
+}
 
-    
+main section {
+  padding: 20px 100px 0 0;
+  color: #4a535a;
+  margin-left: -100px;
+  padding: 20px 100px;
+  width: 100%;
+}
+
+main section h2 {
+  display: block;
+  text-align: left;
+  padding: 10px 20px 10px 0px;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: -0.2px;
+  border-bottom: 1px solid #2a7ae4;
+}
+
+main section p {
+  line-height: 22px;
+  font-size: 16px;
+  font-weight: 100;
 }
 
 /* form rules */
 
 .exercicies {
-margin-top: 50px;
-border: 1px dotted black;
-padding: 10px;
+  margin-top: 50px;
+  border: 1px dotted black;
+  padding: 10px;
 }
 
 .exercicies h2 {
-margin-top: -30px;
-z-index: 10;
-background-color: rgb(238, 236, 226);
-width: 130px;
-padding: 7px;
+  margin-top: -30px;
+  z-index: 10;
+  background-color: rgb(238, 236, 226);
+  width: 130px;
+  padding: 7px;
 }
 .control label {
-width: 150px;
-/* padding: 0 15px; */
-font-weight: bold;
-float: left;
+  width: 150px;
+  /* padding: 0 15px; */
+  font-weight: bold;
+  float: left;
 }
 
 .control select {
-width: 350px;
+  width: 350px;
 }
 .music label {
-float: none;
-margin-top: 50px;
+  float: none;
+  margin-top: 50px;
 }
 
 .music input {
-margin-top: 0px;
+  margin-top: 0px;
 }
 
 .radio label {
-padding: 0 15px;
-font-weight: bold;
-float: left;
-text-align: right;
+  padding: 0 15px;
+  font-weight: bold;
+  float: left;
+  text-align: right;
 }
 
 .small {
-width: 570px;
+  width: 570px;
 }
 
 .line {
-border-top: 1px solid gray;
-margin: 10px;
+  border-top: 1px solid gray;
+  margin: 10px;
 }
 
 .control {
-padding: 1px 0;
-margin: 7px 0;
+  padding: 1px 0;
+  margin: 7px 0;
 }
 
 .end {
-margin-top: 120px;
+  margin-top: 120px;
 }
 fieldset input {
-margin: 2px;
+  margin: 2px;
 }
 
 fieldset label {
-text-align: right;
+  text-align: right;
 }
 .back {
-padding: 15px;
-border: 1px dotted grey;
+  padding: 15px;
+  border: 1px dotted grey;
 }
 .contactform p {
-margin-left: 15px;
+  margin-left: 15px;
 }
 
 .btn {
-padding: 10px;
-font-weight: 900;
-text-align: center;
-box-shadow: 2px 2px 0px rgba(128, 128, 128, 0.438);
-height: 40px;
-width: 90px;
-cursor: pointer;
+  padding: 10px;
+  font-weight: 900;
+  text-align: center;
+  box-shadow: 2px 2px 0px rgba(128, 128, 128, 0.438);
+  height: 40px;
+  width: 90px;
+  cursor: pointer;
 }
 
 .btn-submit {
-background: greenyellow;
-border: 1px rgb(118, 179, 26) solid;
+  background: greenyellow;
+  border: 1px rgb(118, 179, 26) solid;
 }
 
 .btn-reset {
-background: skyblue;
-border: 1px rgb(88, 155, 182) solid;
+  background: skyblue;
+  border: 1px rgb(88, 155, 182) solid;
 }
 
 .title {
-text-align: center;
-background-color: #e7d2b5;
-padding: 20px;
-color: #221811;
-font-weight: 900;
-font-size: 22px;
+  text-align: center;
+  background-color: #e7d2b5;
+  padding: 20px;
+  color: #221811;
+  font-weight: 900;
+  font-size: 22px;
 }
 
 .checkbx {
-text-align: left;
+  text-align: left;
 }
 
 .location {
-width: 400px !important;
+  width: 400px !important;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='number'] {
-border: 1px solid grey;
-height: 20px;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"] {
+  border: 1px solid grey;
+  height: 20px;
 }
 
 input:hover {
-border: 1px solid tomato;
+  border: 1px solid tomato;
 }
 
 input:focus {
-border: 1px solid tomato;
+  border: 1px solid tomato;
 }
 
-#location {
-clear: both;
-}
- 
+/* Hero format*/
 
+.hero {
+  background-color: #2a7ae4;
+  min-height: 250px;
+
+  margin-left: -100px;
+  padding: 20px 100px;
+  color: #fff;
+  background-clip: padding-box;
+
+  background-image: url("images/bg-build.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.hero p {
+  padding: 5px 0 0 0;
+}
+
+.hero h2 {
+  color: #fff;
+  font-weight: bold;
+
+  z-index: 10;
+  font-size: 3em;
+}
+
+.hero h2 {
+  color: #fff;
+  font-weight: bold;
+  padding: 2px 0 3px 0;
+  z-index: 10;
+  font-size: 1.8em;
+}
+
+.hero ul {
+  padding: 30px 0 20px 0;
+}
+
+.hero li {
+  list-style-type: none;
+  padding: 20px;
+  display: inline;
+  border: 1px solid #fff;
+  text-align: center;
+  box-shadow: 2px 2px 0px rgba(128, 128, 128, 0.438);
+  background-color: #fff;
+  color: green;
+  font-size: 1em;
+  min-width: 150px;
+}
+
+/* end hero format*/
