--- a/day-04/day-04/day-04-site-complete/styles/styles-css-animations-introduction.css
+++ b/day-04/day-04/day-04-site-complete/styles/styles-css-animations-introduction.css
@@ -3,18 +3,17 @@
 
 /* Global Variables */
 :root {
-	
-	--brand-color: #4256f4;
-   
-   /* Grid Variables */
-   --one-col: 100%;	
-   --two-col: 49%;
-   --three-col: 32%;
-   --four-col: 23.5%;
-   --five-col: 18.4%;  
-	
-   /* Layout Variables */
-   /* Calculations explained: 
+  --brand-color: #4256f4;
+
+  /* Grid Variables */
+  --one-col: 100%;
+  --two-col: 49%;
+  --three-col: 32%;
+  --four-col: 23.5%;
+  --five-col: 18.4%;
+
+  /* Layout Variables */
+  /* Calculations explained: 
 	  30 -> spacing in pixels
 	  16 -> 1rem = 16px
 	  To figure out the rem value of a 
@@ -23,14 +22,14 @@
 	  the default size as 16 in the browser
 	  settings)
    */
-   --space: calc(30 / 16);	
-   --pad: calc(var(--space) * 1rem);
-   --pad-half: calc(var(--pad) / 2);
-	
-   /* Font-Stacks	*/
-   --font-headings: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-   --font-body: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
-	
+  --space: calc(30 / 16);
+  --pad: calc(var(--space) * 1rem);
+  --pad-half: calc(var(--pad) / 2);
+
+  /* Font-Stacks	*/
+  --font-headings: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+  --font-body: Baskerville, "Palatino Linotype", Palatino,
+    "Century Schoolbook L", "Times New Roman", "serif";
 }
 
 /* Resets */
@@ -39,175 +38,180 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Typography */
 body {
-	line-height: 1.4;
-	font-family: var(--font-body);
+  line-height: 1.4;
+  font-family: var(--font-body);
 }
 
-h1, h2, h3, nav a {
-	font-family: var(--font-headings);
+h1,
+h2,
+h3,
+nav a {
+  font-family: var(--font-headings);
 }
 
 /* General Styles */
 body {
-	margin: 0;
-	background-color: #2E2E2E;
+  margin: 0;
+  background-color: #2e2e2e;
 }
 
 .wrapper {
-	background-color: white;
-	max-width: 860px;
-	margin: 0 auto;
+  background-color: white;
+  max-width: 860px;
+  margin: 0 auto;
 }
 
 header {
-	--color: white;
-	background-color: var(--brand-color);
-	color: var(--color);
+  --color: white;
+  background-color: var(--brand-color);
+  color: var(--color);
 }
 
 header h1 {
-	margin: 0;
-	padding: var(--pad-half) var(--pad);
+  margin: 0;
+  padding: var(--pad-half) var(--pad);
 }
 
 /* Main Styles */
 main {
-	padding: var(--pad);
+  padding: var(--pad);
 }
 
 main h1:first-child,
 main h2:first-child {
-	margin-top: 0;
-	width: 100%;
+  margin-top: 0;
+  width: 100%;
 }
 
 .row {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: var(--pad) 0;
-	align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: var(--pad) 0;
+  align-items: flex-start;
 }
 
 .col {
-	width: var(--two-col);
-	padding: var(--pad);
-	border: 1px solid #ccc;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 2%;
-	--box-size: 130px;
+  width: var(--two-col);
+  padding: var(--pad);
+  border: 1px solid #ccc;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2%;
+  --box-size: 130px;
 }
 
 .image-gallery {
-	background-color: #6C4C0F;
-	padding: 20px;
+  background-color: #6c4c0f;
+  padding: 20px;
 }
 
 .image-gallery .col {
-	width: var(--five-col);
-	padding: 0;
-	display: block;
-	margin-bottom: 0;
-	padding: 0;
+  width: var(--five-col);
+  padding: 0;
+  display: block;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 .image-gallery img {
-	display: block;
-	border: 8px solid white;
-	outline: 2px solid black;
+  display: block;
+  border: 8px solid white;
+  outline: 2px solid black;
 }
 
 .tr-demo-img {
-	max-width: 300px;
-	height: auto;
-	border: 8px solid green;
+  max-width: 300px;
+  height: auto;
+  border: 8px solid green;
 }
 
 .col h2 {
-	margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .col figure {
-	margin: 0;
+  margin: 0;
 }
 
 .col figure h2 {
-	margin-top: 0.6em;
-	margin-bottom: 0;
-	line-height: 1;
+  margin-top: 0.6em;
+  margin-bottom: 0;
+  line-height: 1;
 }
 
 .box {
-	--rgb: 1, 162, 74;
-	--alpha: 1;
-	--bg-color: rgba(var(--rgb), var(--alpha));
-	width: var(--box-size);
-	height: var(--box-size);
-	background-color: var(--bg-color);
+  --rgb: 1, 162, 74;
+  --alpha: 1;
+  --bg-color: rgba(var(--rgb), var(--alpha));
+  width: var(--box-size);
+  height: var(--box-size);
+  background-color: var(--bg-color);
 }
 
 .example-transform-origin .box {
-	position: absolute;
-	top: 0;
-	left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .box-reference {
-	--alpha: 0.3;
-	border: 2px solid rgb(var(--rgb));
+  --alpha: 0.3;
+  border: 2px solid rgb(var(--rgb));
 }
 
 .box-container {
-	position: relative;
-	width: var(--box-size);
-	height: var(--box-size);
+  position: relative;
+  width: var(--box-size);
+  height: var(--box-size);
 }
 
 .container {
-	background-color: #0200B5;
-	padding: var(--pad);
-	color: white;
+  background-color: #0200b5;
+  padding: var(--pad);
+  color: white;
 }
 
 .container h2:first-child,
 .container p:first-child {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 .container p:last-child {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .animation-container {
-	position: relative;
-	width: 600px;
-	height: 400px;
-	border: 5px solid black;
+  position: relative;
+  width: 600px;
+  height: 400px;
+  border: 5px solid black;
 }
 
 .ball {
-	--size: 35px;
-	width: var(--size);
-	height: var(--size);
-	position: absolute;
-	background-color: red;
-	border-radius: 50%;
-	bottom: calc(100% - var(--size));
-	left: 0;
+  --size: 35px;
+  width: var(--size);
+  height: var(--size);
+  position: absolute;
+  background-color: red;
+  border-radius: 50%;
+  bottom: calc(100% - var(--size));
+  left: 0;
 }
 
 /* CSS Animations */
@@ -297,54 +301,53 @@ animation:	[ animation name ]
 
 /* Bouncing Ball Animation */
 .ball {
-	animation: bouncing 2s linear 2s 3 alternate both;
+  animation: bouncing 2s linear 2s 3 alternate both;
 }
 
 @keyframes bouncing {
-	40% {
-		bottom: 0;
-		animation-timing-function: ease-out;
-	}
-	
-	55% {
-		bottom: 200px;
-		animation-timing-function: ease-in;
-	}
-	
-	70% {
-		bottom: 0;
-		animation-timing-function: ease-out;
-	}
-	
-	80% {
-		bottom: 84px;
-		animation-timing-function: ease-in;
-	}
-	
-	90% {
-		bottom: 0;
-		animation-timing-function: ease-out;
-	}
-	
-	95% {
-		bottom: 28px;
-		animation-timing-function: ease-in;
-	}
-	
-	100% {
-		bottom: 0;
-		left: calc(100% - var(--size));
-		animation-timing-function: ease-out;
-	}
-}
+  40% {
+    bottom: 0;
+    animation-timing-function: ease-out;
+  }
 
+  55% {
+    bottom: 200px;
+    animation-timing-function: ease-in;
+  }
+
+  70% {
+    bottom: 0;
+    animation-timing-function: ease-out;
+  }
+
+  80% {
+    bottom: 84px;
+    animation-timing-function: ease-in;
+  }
+
+  90% {
+    bottom: 0;
+    animation-timing-function: ease-out;
+  }
+
+  95% {
+    bottom: 28px;
+    animation-timing-function: ease-in;
+  }
+
+  100% {
+    bottom: 0;
+    left: calc(100% - var(--size));
+    animation-timing-function: ease-out;
+  }
+}
 
 /* footer styles */
 footer {
-	border-top: 1px dotted #ccc;
-	padding: var(--pad-half) var(--pad);
+  border-top: 1px dotted #ccc;
+  padding: var(--pad-half) var(--pad);
 }
 
 footer p {
-	margin: 0;
+  margin: 0;
 }
