Middle Project 1 version

--- a/day-02/day-02-site-complete/styles/styles-responsive-web-site.css
+++ b/day-02/day-02-site-complete/styles/styles-responsive-web-site.css
@@ -3,331 +3,304 @@
 
 /* Responsive Images Reset */
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /* typography */
 
 body {
-	font-family: 'Karla', sans-serif;
-	background-color: #ebebeb;
+  font-family: "Karla", sans-serif;
+  background-color: #ebebeb;
 }
 
-h1, h2, h3, nav a {
-	font-family: 'Montserrat', sans-serif;
-} 
+h1,
+h2,
+h3,
+nav a {
+  font-family: "Montserrat", sans-serif;
+}
 
 /* Container Styles */
 .container {
-	background-color: white;
-	position: relative;
-	width: 100%;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0;
+  background-color: white;
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 /* header styles */
 header {
-	background-color: #FF4C2E;
-	height: 90px;
-}
-
-header .container {
-	background-color: #FF4C2E;
-	padding: 0 30px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  background-color: #ff4c2e;
+  height: 90px;
 }
 
 header a {
-	color: white;
+  color: white;
 }
 
 header a:hover,
 header a:active,
 header a:focus {
-	color: white;
+  color: white;
 }
 
 header h1 {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 header h1 a {
-	margin: 0;
-	line-height: 90px;
-	font-size: 3rem;
-	float: left;
+  margin: 0;
+  line-height: 90px;
+  font-size: 3rem;
+  float: left;
 }
 
 /* header navigation styles */
 .btn-menu {
-	display: none;
+  display: none;
 }
 
 header nav {
-	width: 600px;
+  width: 600px;
 }
 
 header nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 header nav li {
-	width: 20%;
+  width: 20%;
 }
 
 header nav a {
-	display: block;
-	font-size: 1.2rem;
-	font-weight: bold;
-	text-align: center;
-	line-height: 90px;
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  line-height: 90px;
 }
 
 header nav a:hover,
 header nav a:active,
 header nav a:focus {
-	color: white;
-	background-color: rgba(255,255,255,0.3);
-	text-decoration: none;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.3);
+  text-decoration: none;
 }
-
 
 /* top banner styles */
 
 .top-banner {
-	padding: 100px 0;
+  padding: 100px 0;
 }
 
 .top-banner h2 {
-	font-size: 4rem;
-	text-align: center;
-	line-height: 1.2;
+  font-size: 4rem;
+  text-align: center;
+  line-height: 1.2;
 }
 
 .top-banner p {
-	text-align: center; 
-	font-size: 2rem;
-	margin: 0;
-	line-height: 1.2;
+  text-align: center;
+  font-size: 2rem;
+  margin: 0;
+  line-height: 1.2;
 }
 
 /* mid banner styles */
 .mid-banner {
-	position: relative;
+  position: relative;
 }
 
 .mid-banner h2 {
-	color: white;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 4rem;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
 }
 
 /* Grid Styles */
 .row {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 /* Grid Column Widths */
 .one-half {
-	width: 48%;
+  width: 48%;
 }
 
 .one-third {
-	width: 30.6666666667%;
+  width: 30.6666666667%;
 }
-
 
 /* process styles */
 .process {
-	padding: 30px;
+  padding: 30px;
 }
 
 .process > h1 {
-	text-align: center;
-	margin-bottom: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .process article h1 {
-	text-align: center;
+  text-align: center;
 }
 
 /* bottom banner styles */
 .bottom-banner {
-	background-color: #F2F2F2;
-	padding: 90px 0;
+  background-color: #f2f2f2;
+  padding: 90px 0;
 }
 
 .bottom-banner p {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: bold;
-	font-size: 2.5rem;
-	text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .bottom-banner a {
-	color: white;
-	display: block;
-	background-color: #FF4C2E;
-	padding: 14px 40px;
-	width: 200px;
-	font-size: 1.1rem;
-	font-weight: bold;
-	font-family: 'Montserrat', sans-serif;
-	text-transform: uppercase;
-	margin: 0 auto;
+  color: white;
+  display: block;
+  background-color: #ff4c2e;
+  padding: 14px 40px;
+  width: 200px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  margin: 0 auto;
 }
 
 footer {
-	background-color: black;
-	color: white;
-	padding: 30px;
+  background-color: black;
+  color: white;
+  padding: 30px;
 }
 
 footer a {
-	color: white;
+  color: white;
 }
 
 footer a:hover,
 footer a:active,
 footer a:focus {
-	color: white;
+  color: white;
 }
-
 
 /* Media Queries */
-@media screen and (max-width: 900px){
-	
-    /* responsive navigation */
-	
-	.btn-menu {
-		display: block;
-		background-color: transparent;
-		border: none;
-		font-size: 1.3rem;
-		color: white;
-		text-transform: uppercase;
-		line-height: 90px;
-	}
-	
-	.btn-menu:focus {
-		outline: 1px solid rgba(255,255,255, 0.3);
-	}
-	
-	header nav {
-		display: none;
-		width: 100%;
-		clear: both;
-		background-color: #FF4C2E;
-	}
+@media screen and (max-width: 900px) {
+  /* responsive navigation */
 
-	header nav ul {
-		display: block;
-	}
+  .btn-menu {
+    display: block;
+    background-color: transparent;
+    border: none;
+    font-size: 1.3rem;
+    color: white;
+    text-transform: uppercase;
+    line-height: 90px;
+  }
 
-	header nav li {
-		width: 100%;
-	}
-	
-	header nav a {
-		display: block;
-		line-height: 40px;
-		text-align: center;
-	}
-	
-	.show header {
-		height: auto;
-	}
-	
-	.show header nav {
-		display: block;
-	}
-	
-    /* top banner */
-	.top-banner {
-		padding: 10vw 0;
-	}
-	
-	.top-banner h2 {
-		font-size: 7vw;
-	}
-	
-	.top-banner p {
-		font-size: 3.5vw;
-	}
-	
-	.mid-banner h2 {
-		font-size: 7vw;
-	}
-	
-	.bottom-banner {
-		padding: 30px;
-	}
-	
+  .btn-menu:focus {
+    outline: 1px solid rgba(255, 255, 255, 0.3);
+  }
+
+  header nav {
+    display: none;
+    width: 100%;
+    clear: both;
+    background-color: #ff4c2e;
+  }
+
+  header nav ul {
+    display: block;
+  }
+
+  header nav li {
+    width: 100%;
+  }
+
+  header nav a {
+    display: block;
+    line-height: 40px;
+    text-align: center;
+  }
+
+  .show header {
+    height: auto;
+  }
+
+  .show header nav {
+    display: block;
+  }
+
+  /* top banner */
+  .top-banner {
+    padding: 10vw 0;
+  }
+
+  .top-banner h2 {
+    font-size: 7vw;
+  }
+
+  .top-banner p {
+    font-size: 3.5vw;
+  }
+
+  .mid-banner h2 {
+    font-size: 7vw;
+  }
+
+  .bottom-banner {
+    padding: 30px;
+  }
 }
 
-@media screen and (max-width: 560px){
-	
-	header {
-		height: 70px;
-	}
-	
-	header h1 a {
-		line-height: 70px;
-		font-size: 2.5rem;
-	}
-	
-	.btn-menu {
-		line-height: 70px;
-		font-size: 1.2rem;
-	}
+@media screen and (max-width: 560px) {
+  header {
+    height: 70px;
+  }
 
-	/* Make Grid Columns 
+  header h1 a {
+    line-height: 70px;
+    font-size: 2.5rem;
+  }
+
+  .btn-menu {
+    line-height: 70px;
+    font-size: 1.2rem;
+  }
+
+  /* Make Grid Columns 
 	   Single Columns on Mobile */
-	.one-half,
-	.one-third {
-		width: 100%;
-	}
-	
+  .one-half,
+  .one-third {
+    width: 100%;
+  }
 }
 
-@media screen and (max-width: 400px){
-	
-	section {
-		padding: 20px;
-	}
-	
-	header .container {
-		padding: 0 20px;
-	}
-	
-	footer {
-		padding: 20px;
-	}
-	
+@media screen and (max-width: 400px) {
+  section {
+    padding: 20px;
+  }
+
+  header .container {
+    padding: 0 20px;
+  }
+
+  footer {
+    padding: 20px;
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
