--- a/day-07/day-07-site-complete/styles/styles-grid-fr-unit.css
+++ b/day-07/day-07-site-complete/styles/styles-grid-fr-unit.css
@@ -42,6 +42,14 @@ html {
 	grid-gap: 20px 20px;
 }
 
-.box {
-/*	width: 33.33333333%;	*/
+
+.box2::before
+{
+  background: #000;
+}
+
+
+.box2::after
+{
+  background: rgb(223, 0, 0);
 }
